fix(ui5-timeline) properly aligned indicator in compact mode

--- a/packages/fiori/src/themes/TimelineItem.css
+++ b/packages/fiori/src/themes/TimelineItem.css
@@ -29,7 +29,7 @@
 	width: 1px;
 	position: absolute;
 	top: 2.125rem;
-	bottom: -1.625rem;
+	bottom: var(--_ui5_timeline_tli_indicator_before_bottom);
 	left: 50%;
 }
 
@@ -41,28 +41,36 @@
 	top: 50%;
 	position: absolute;
 	left: 2.0625rem;
-	right: -1.625rem;
+	right: var(--_ui5_timeline_tli_indicator_before_right);
+}
+:host([layout="Vertical"]) .ui5-tli-indicator.ui5-tli-indicator-large-line::before {
+	bottom: var(--_ui5_timeline_tli_indicator_before_without_icon_bottom);
 }
 
 :host([layout="Horizontal"]) .ui5-tli-indicator.ui5-tli-indicator-large-line::before{
-	right: -1.9375rem;
+	right: var(--_ui5_timeline_tli_indicator_before_without_icon_right);
 }
 
 /* Line when no Icon is provided */
 :host([layout="Vertical"]:not([icon])) .ui5-tli-indicator::before {
-	bottom: -1.625rem;
+	bottom: var(--_ui5_timeline_tli_indicator_before_without_icon_bottom);
 	top: 1.875rem;
 }
 
 /* Line when no Icon is provided in horizontal*/
 :host([layout="Horizontal"]:not([icon])) .ui5-tli-indicator::before {
 	top: 50%;
-	right: -1.9375rem;
+	right: var(--_ui5_timeline_tli_indicator_before_without_icon_right);
 	left: 1.6875rem;
 }
 
- :host([layout="Horizontal"]:not([icon])) .ui5-tli-indicator.ui5-tli-indicator-short-line::before {
-	right: -1.625rem;
+:host([layout="Vertical"]:not([icon])) .ui5-tli-indicator.ui5-tli-indicator-short-line::before {
+	/* bottom: -1.625rem; */
+	bottom: var(--_ui5_timeline_tli_indicator_before_bottom); 
+}
+
+:host([layout="Horizontal"]:not([icon])) .ui5-tli-indicator.ui5-tli-indicator-short-line::before {
+	right: var(--_ui5_timeline_tli_indicator_before_right);
 }
 
 /* No Icon Dot */
@@ -270,10 +278,10 @@
 /* Line when no Icon is provided in horizontal*/
 :host([layout="Horizontal"]:not([icon])) [dir=rtl] .ui5-tli-indicator::before {
 	right: 1.9375rem;
-	left: -1.625rem;
+	left: var(--_ui5_timeline_tli_indicator_before_right);
 }
 
 :host([layout="Horizontal"]) [dir=rtl] .ui5-tli-indicator::before {
-	left: -1.625rem;
+	left: var(--_ui5_timeline_tli_indicator_before_right);
 	right: 2.125rem;
 }
